--- a/index.html
+++ b/index.html
@@ -78,7 +78,18 @@
             </div>
         </main>
         <footer></footer>
+<section class="container">
+    <div class="border">
+        <h1>How does javascript work?</h1>
+        <p>JavaScript is a client-side scripting language.One of the most common uses of JavaScript is to validate data given by the user in the form fields.Java program needs to be compiled before it runs.java code pass through compiler thats it turn the source code into bytecodes thats a machine can understand the codes..
 
+        </p>
+    </div>
+    <div class="border">
+        <h1>Differentaite between local storage and session storage.</h1>
+        <p>Local storage saves data even if the browser is closed but in the other hand session storage removes data if the tab is closed. Storage capacity of session storage is 5mb and local storage is 10mb. Local storage data needs to be deleted manually but data stored in session storage is deleted </p>
+    </div>
+</section>
         <!-- add javascript  file  -->
         <script src="./js/app.js"></script>
     </body>
