--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
     <div class="border">
         <h1>Differentaite between local storage and session storage.</h1>
-        <p>Local storage saves data even if the browser is closed but in the other hand session storage removes data if the tab is closed. Storage capacity of session storage is 5mb and local storage is 10mb. Local storage data needs to be deleted manually but data stored in session storage is deleted </p>
+        <p>Local storage saves data even if the browser is closed but in the other hand session storage removes data if the tab is closed. Storage capacity of session storage is 5mb and local storage is 10mb. Local storage data needs to be deleted manually but data stored in session storage is deleted . We can perform crud operation localstorage in web brower using js </p>
     </div>
 </section>
         <!-- add javascript  file  -->
